styles/style.css
/* ... */
.service__title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.service__heading {
  margin: 2rem 0 1.5rem;
  font-weight: bold;
  text-align: center;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
}

.service__txt {
  text-align: center;
  line-height: 2.8rem;
  color: var(--primary-clr-grey);
}

.service__img {
  margin-bottom: 5rem;
}

.service__img-2 {
  display: none;
}

/* SERVICE CAROUSEL  */
.service__carousel-blk {
  width: 100%;
  min-height: 20rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: var(--secondary-clr-white);
}

.carousel-blk {
  width: 100%;
  min-height: 12rem;
  display: flex;
  align-items: center;
  overflow-x: scroll;
  padding: 5%;
  column-gap: 1.6rem;
  background-color: var(--primary-clr-white);
}

.carousel__item {
  height: 9.6rem;
  min-width: 75%;
  background: var(--primary-clr-white);
  border-radius: 1.6rem;
  box-shadow: 0.01rem 0.01rem 5rem var(--box-shadow-grey);
  display: flex;
  align-items: center;
  padding: 7%;
}

.carousel__indicator-blk {
  width: 100%;
  min-height: 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.indicator-blk {
  width: 100%;
  height: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 1.6rem;
}

.indicator {
  background: var(--secondary-clr-grey);
  width: 1rem;
  height: 1rem;
  border-radius: 0.5rem;
  opacity: 20%;
}

.indicator:nth-child(2) {
  background: var(--primary-clr-blue);
  opacity: 100%;
}

/* SMART HOME TESTIMONIAL SECTION */

.home__testimonial-blk {
  max-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16rem 0 7.5rem;
  background-color: var(--secondary-clr-white);
}

.testimonial__info-blk {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.testimonial__info {
  max-width: 75%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.testimonial__title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.testimonial__heading {
  margin: 1.7rem 0;
  font-weight: bold;
  text-align: center;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
}

/* USER TESTIMONIAL CARD */

.testimonial__card-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--secondary-clr-white);
}

.testimonial__card-carousel {
  width: 100%;
  min-height: 40rem;
  background-color: var (--secondary-clr-white);
  padding: 5%;
  display: flex;
  align-items: center;
  column-gap: 1.6rem;
  overflow-x: scroll;
  position: relative;
}

.testimonial__card {
  min-width: 31.5rem;
  height: 30.1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 2.4rem;
  background-color: var(--primary-clr-white);
  position: relative;
}

.card__user-img {
  position: absolute;
  top: -3rem;
}

.card__user-quote {
  text-align: center;
  line-height: 2.8rem;
  color: var(--primary-clr-black);
  margin-top: 3.4rem;
  width: 28rem;
}

.card__user-name {
  font-weight: 600;
  color: var(--primary-clr-black);
  margin-top: 3.6rem;
}

.card__user-position {
  margin-top: 0.9rem;
  text-align: center;
  font-size: 1.3rem;
  color: var(--primary-clr-grey);
  line-height: 2.4;
}

.card__quote-design {
  position: absolute;
  bottom: 2.8rem;
  right: 2.5rem;
}

.card-carousel__indicator-blk {
  margin-top: -2.5rem;
}

/* SMART HOME CONTACT SECTION */

.home__contact-info-blk {
  max-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16rem 0 10rem;
  background-color: var(--primary-clr-white);
}

.contact__info-blk {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.contact__info {
  max-width: 85%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact__title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.contact__heading {
  margin: 1.7rem 0;
  font-weight: bold;
  text-align: center;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
}

/* .contact__img-blk {
}

.contact__img {
}

.contact__form-blk {
} */

/*SMART HOME CONTACT FORM */

.contact__form-blk {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  padding: 5%;
  margin-top: 6.4rem;
}

.form {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.form__group {
  width: 100%;
  min-height: 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  column-gap: 1.6rem;
  margin-bottom: 2rem;
}

.form__group label {
  line-height: 2.4;
  font-size: 1.5rem;
  color: var(--primary-clr-black);
}

.form__group input {
  width: 31.5rem;
  height: 4.8rem;
  padding: 2%;
  margin-bottom: 1.6rem;
}

.form__group-textarea {
  margin-bottom: 4rem;
}

.form__textarea {
  max-height: 12rem;
  max-width: 31.5rem;
  min-height: 12rem;
  min-width: 31.5rem;
}

.form__group-blk {
  width: 100%;
  display: flex;
  justify-content: center;
}

.form__submit-btn {
  width: 9rem;
  height: 4rem;
  background-color: var(--primary-clr-green);
  font-weight: bold;
  color: var(--primary-clr-white);
  padding: 1rem 2rem;
  font-size: 1.5rem;
  border: none;
  border-radius: 0.4rem;
  box-shadow: 0.01rem 0.01rem 5rem var(--box-shadow-grey);
}
/* ... */

